@@ -77,11 +77,6 @@ $().ready(function() {
 		}
 	});
 	
-	// check if confirm password is still valid after password changed
-	$("#password").blur(function() {
-		$("#confirm_password").valid();
-	});
-	
 	//code to hide topic selection, disable for demo
 	var newsletter = $("#newsletter");
 	// newsletter topics are optional, hide at first
